force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/FSM_InfraDataCaptureForm2__c.object-meta.xml
<CustomObject>
    <description>Created as a part of SFS-3958</description>
    <label>Infra Data Capture Form 2</label>
    <nameField>
        <displayFormat>DCFINFRA-{000000}</displayFormat>
        <label>Infra Data Capture Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Infra Data Capture Form 2</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>