force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_10mDownstream__c.field-meta.xml
<CustomField>
    <fullName>FSM_10mDownstream__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4810</description>
    <label>10m downstream</label>
    <type>Checkbox</type>
</CustomField>