force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_2xConsentLimitNonReportable__c.field-meta.xml
<CustomField>
    <fullName>FSM_2xConsentLimitNonReportable__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>&lt;2x Consent Limit (Non- Reportable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treatment – Non Visible High River Flow</fullName>
            </value>
            <value>
                <fullName>Treatment – Non Visible Medium River Flow</fullName>
            </value>
            <value>
                <fullName>Treatment – Non Visible Low River Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>