force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_AccessPipeEnd1Comments__c.field-meta.xml
<CustomField>
    <fullName>FSM_AccessPipeEnd1Comments__c</fullName>
    <description>Created as a part of SFS-4803</description>
    <label>Access to Pipe End1 Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>