force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_AccessPipeEnd2__c.field-meta.xml
<CustomField>
    <fullName>FSM_AccessPipeEnd2__c</fullName>
    <description>Created as a part of SFS-4803</description>
    <inlineHelpText>Access to the end of the pipe may be possible, but with suitable precautions makes it difficult to cross and therefore deters people from doing so.
- End 2 has been determined as the end from which the flows ends</inlineHelpText>
    <label>Access to Pipe End2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not accessible (unlikely)</fullName>
            </value>
            <value>
                <fullName>Difficult i.e. fencing present</fullName>
            </value>
            <value>
                <fullName>Possible i.e deterrents in place but access possible</fullName>
            </value>
            <value>
                <fullName>Easy. Deterrents in place but not substantial</fullName>
            </value>
            <value>
                <fullName>Very Easy - No deterrents present</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>