force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_AllPhotosAmmoniaSamples__c.field-meta.xml
<CustomField>
    <fullName>FSM_AllPhotosAmmoniaSamples__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4810</description>
    <label>Photos samples clear, time/date stamped</label>
    <type>Checkbox</type>
</CustomField>