force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_AllPhotosTimeDateStamped__c.field-meta.xml
<CustomField>
    <fullName>FSM_AllPhotosTimeDateStamped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-4810</description>
    <label>Photos time/date stamped uploaded</label>
    <type>Checkbox</type>
</CustomField>