force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_AM__c.field-meta.xml
<CustomField>
    <fullName>FSM_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-6005</description>
    <label>AM</label>
    <type>Checkbox</type>
</CustomField>