force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_AmbientTemperature__c.field-meta.xml
<CustomField>
    <fullName>FSM_AmbientTemperature__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Ambient Temperature (°C)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>