force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_Amenity__c.field-meta.xml
<CustomField>
    <fullName>FSM_Amenity__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Amenity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rear of properties</fullName>
            </value>
            <value>
                <fullName>Public access</fullName>
            </value>
            <value>
                <fullName>Footpath</fullName>
            </value>
            <value>
                <fullName>Highway</fullName>
            </value>
            <value>
                <fullName>Fields</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>