force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_AmmoniaSample__c.field-meta.xml
<CustomField>
    <fullName>FSM_AmmoniaSample__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Ammonia (N)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>