force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CarriagewayRestriction__c.field-meta.xml
<CustomField>
    <fullName>FSM_CarriagewayRestriction__c</fullName>
    <description>SFS-3010
updated as part SFS-6510</description>
    <inlineHelpText>What type of TMA is required, Please refer to the red book to select the correct type.</inlineHelpText>
    <label>Carriageway Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Carriageway incursion</fullName>
            </value>
            <value>
                <fullName>Some carriageway incursion</fullName>
            </value>
            <value>
                <fullName>Traffic control (stop/go boards)</fullName>
            </value>
            <value>
                <fullName>Traffic control (two-way signals)</fullName>
            </value>
            <value>
                <fullName>Traffic Control (Give and Take)</fullName>
            </value>
            <value>
                <fullName>Traffic control (priority working)</fullName>
            </value>
            <value>
                <fullName>Traffic control (convoy working)</fullName>
            </value>
            <value>
                <fullName>Lane closure</fullName>
            </value>
            <value>
                <fullName>Contra-flow</fullName>
            </value>
            <value>
                <fullName>Road closure</fullName>
            </value>
            <value>
                <fullName>Traffic control (three-way signals)</fullName>
            </value>
            <value>
                <fullName>Traffic control (four-way signals)</fullName>
            </value>
            <value>
                <fullName>Traffic control (five-way signals)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>