force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CommentsInspection__c.field-meta.xml
<CustomField>
    <fullName>FSM_CommentsInspection__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>