force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CompletedBy__c.field-meta.xml
<CustomField>
    <fullName>FSM_CompletedBy__c</fullName>
    <description>Created as Part of SFS-4811</description>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed by</label>
    <type>Text</type>
</CustomField>