force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_CompletedDate__c</fullName>
    <description>Created as Part of SFS-4811</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date complete</label>
    <type>Date</type>
</CustomField>