force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_ConditionOfADM__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConditionOfADM__c</fullName>
    <description>Created as a part of SFS-4803</description>
    <inlineHelpText>There are a number of different types of Access Deterrent Measure ADM. 	
Most pipe bridges will have some form of access deterrent measure, and those that don&apos;t probably require it. 	
This section is to determine if what is there is sufficient and what condition it is in.</inlineHelpText>
    <label>Access Deterrent Measures (ADM) fitted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipe bridge within secure compound / fencing and ADM&apos;s not required.</fullName>
            </value>
            <value>
                <fullName>ADM&apos;s fitted and appear to be in reasonable condition</fullName>
            </value>
            <value>
                <fullName>ADM&apos;s fitted but condition poor / inadequate number of devices fitted.</fullName>
            </value>
            <value>
                <fullName>No ADM&apos;s fitted and deemed not necessary</fullName>
            </value>
            <value>
                <fullName>No ADM&apos;s fitted but they are required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>