force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_ConditionOfPipe__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConditionOfPipe__c</fullName>
    <label>What is the condition of the pipe ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipe appears to be in good order</fullName>
            </value>
            <value>
                <fullName>Unable to see pipe condition as wrapped but wrapping appears in good condition</fullName>
            </value>
            <value>
                <fullName>Signs of weathering to pipe but no significant concerns</fullName>
            </value>
            <value>
                <fullName>Deterioration of the wrapping evident so can assume pipe may have pitting / corrosion</fullName>
            </value>
            <value>
                <fullName>Signs of pitting / corrosion to the pipe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>