force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_ConditionOfPipeComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_ConditionOfPipeComments__c</fullName>
    <description>Created as a part of SFS-4803</description>
    <label>condition of the pipe ? Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>