force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CrewMembers__c.field-meta.xml
<CustomField>
    <fullName>FSM_CrewMembers__c</fullName>
    <label>Crew Members</label>
    <length>255</length>
    <type>Text</type>
</CustomField>