force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CrudeSewageLiquor__c.field-meta.xml
<CustomField>
    <fullName>FSM_CrudeSewageLiquor__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Crude Sewage (Liquor Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor Visible Impact Localised Around The Outfall</fullName>
            </value>
            <value>
                <fullName>&lt; 10m</fullName>
            </value>
            <value>
                <fullName>11-25m</fullName>
            </value>
            <value>
                <fullName>26-99m</fullName>
            </value>
            <value>
                <fullName>&gt;100m</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>