force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CSOAddress__c.field-meta.xml
<CustomField>
    <fullName>FSM_CSOAddress__c</fullName>
    <formula>FSM_WorkOrder__r.Street &amp;&quot;, &quot;&amp; FSM_WorkOrder__r.City &amp;&quot;, &quot;&amp; FSM_WorkOrder__r.State &amp;&quot;, &quot;&amp; FSM_WorkOrder__r.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSO Address</label>
    <type>Text</type>
</CustomField>