force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CSOCondition__c.field-meta.xml
<CustomField>
    <fullName>FSM_CSOCondition__c</fullName>
    <description>Created as Part of SFS-4811</description>
    <label>What is condition/location of monitor?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>