force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CSOCover__c.field-meta.xml
<CustomField>
    <fullName>FSM_CSOCover__c</fullName>
    <description>Created as Part of SFS-4811</description>
    <label>Cover and Frame check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good condition inside &amp; out</fullName>
            </value>
            <value>
                <fullName>Poor condition - FOW needed</fullName>
            </value>
            <value>
                <fullName>Poor condition - NO FOW needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>