force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CSOFlow__c.field-meta.xml
<CustomField>
    <fullName>FSM_CSOFlow__c</fullName>
    <description>Created as Part of SFS-4811</description>
    <label>Flow at time of visit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Storm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>