force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CSOFlowDevice__c.field-meta.xml
<CustomField>
    <fullName>FSM_CSOFlowDevice__c</fullName>
    <description>Created as part of SFS-4811</description>
    <label>Device Condition Corrective Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Clear - No FOW required</fullName>
            </value>
            <value>
                <fullName>Restricted - Further work required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>