force-app/main/default/objects/FSM_InfraDataCaptureForm2__c/fields/FSM_CSOFlowFlowControl__c.field-meta.xml
<CustomField>
    <fullName>FSM_CSOFlowFlowControl__c</fullName>
    <description>Created as part of SFS-4811</description>
    <label>Flow Control Device</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good Condition, No FOW required</fullName>
            </value>
            <value>
                <fullName>Poor Condition, Flow now restored</fullName>
            </value>
            <value>
                <fullName>Poor Condition, FOW needed</fullName>
            </value>
            <value>
                <fullName>High Risk - Blocked or Damaged</fullName>
            </value>
            <value>
                <fullName>Other - Call Catchment Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>